# pytorch-crash-course

./: .gitignore  MISSION.md  README.md  RESOURCES.md  main.py  pyproject.toml
practice/: 01_tensor_ops.py  02_autograd.py  03_network_building.py  04_loss_optim.py  05_custom_dataset.py  06_training.py  07_gpu_checkpoint.py  08_cs336_bridge.py
side/: 01_python_slices.py
tutorial/: 01_tensor_basics.py  01_tensor_basics_lab.ipynb  02_autograd.py  02_autograd_lab.ipynb  03_nn_module.py  03_nn_module_lab.ipynb  04_loss_optim_lab.ipynb  04_loss_optimizer.py  05_data_loading.py  05_data_loading_lab.ipynb  06_training_loop.py  06_training_loop_lab.ipynb  07_gpu_save_load.py  07_gpu_save_load_lab.ipynb  08_cs336_bridge_lab.ipynb  _build_06_notebook.py  _build_07_notebook.py
